--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "flowbite": "^3.1.2",
     "framer-motion": "^12.12.1",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.508.0",
     "moment": "^2.30.1",
     "react": "^19.1.0",
